--- a/all_access/src/EntitlementServerAllAccess/Views/Home/signin_form.cshtml
+++ b/all_access/src/EntitlementServerAllAccess/Views/Home/signin_form.cshtml
@@ -1,4 +1,4 @@
-﻿<form method="get">
+﻿<form method="get" enctype="multipart/form-data">
 
     <input value="signin" type="hidden" name="do" />
     <p>
